[package]
name = "atomalloc"
version = "0.1.0"
edition = "2021"
description = "atomalloc is an asynchronous, atomic, and lock-free memory allocator."
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/ovnanova/atomalloc"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
crossbeam = "0.8.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
