[package]
name = "atomalloc"
version = "0.1.0"
edition = "2021"
description = "atomalloc is an asynchronous, atomic, and lock-free memory allocator written in pure safe Rust"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/ovnanova/atomalloc"

[dependencies]
crossbeam = "0.8.4"
smol = "2.0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[dev-dependencies]
macro_rules_attribute = "0.2.0"
smol-macros = "0.1.1"
